--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ navbar_fixed: true
 footer_fixed: true
 search_enabled: true
 socials_in_search: true
-posts_in_search: true
+posts_in_search: false
 bib_search: true
 
 # Dimensions
@@ -137,12 +137,6 @@ newsletter:
 
 collections:
   books:
-    output: true
-  news:
-    defaults:
-      layout: post
-    output: true
-  projects:
     output: true
 
 # -----------------------------------------------------------------------------
