--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -29,6 +29,7 @@ dblp_url: https://dblp.org/pid/33/3675-3.html
 # linkedin_username: # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
+scholar_userid: fhKFGecAAAAJ
 orcid_id: 0000-0002-8517-0580 # your ORCID ID
 # osf_id: # your OSF ID
 # pinterest_id: # your pinterest id
